# Space-Invaders

./: CMakeLists.txt  Colissions.cpp  Colissions.h  Component.cpp  Component.h  Game.cpp  Game.h  README.md  main.cpp
Compositions/: EnemyRow.cpp  EnemyRow.h  PlayerComposite.cpp  PlayerComposite.h  RowComposite.cpp  RowComposite.h  ScreenComposite.cpp  ScreenComposite.h
Leaves/: Bullet.cpp  Bullet.h  Player.cpp  Player.h
Leaves/enemies/: Enemy.cpp  Enemy.h  EnemyLarge.cpp  EnemyLarge.h  EnemyMedium.cpp  EnemyMedium.h  EnemySmall.cpp  EnemySmall.h
Main_Menu/: CMakeLists.txt  Main_menu.cpp  Main_menu.h
Observer Pattern Abstract/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
Tests/: CMakeLists.txt  main_menu_test.cpp
images/: invader-3-frame-2.psd
